# marvin-cpp

./: .gitignore  CMakeLists.txt  CMakeLists_new.cmake  Doxyfile  Doxyfile.bak  TODO.md  main.cpp  makefile  proxy_log  readme.md  smpl.json  test_set_1.cpp  tests_build  things.todo
apps/config/: CMakeLists.txt  config.cpp
apps/proxy/: CMakeLists.txt  main.cpp
apps/simple_proxy/: CMakeLists.txt  cert_handshaker.cpp  cert_handshaker.hpp  cert_handshaker_w1.cpp  cert_handshaker_w2.hpp  cert_handshaker_w3.cpp  cert_handshaker_w3.hpp  cmd_stop.hpp  contact_server.hpp  ctl_app.cpp  ctl_app.hpp  ctl_thread.cpp  ctl_thread.hpp  handshake.cpp  marvin_handshaker.cpp  mitm_thread.cpp  mitm_thread.hpp  simple_proxy.cpp  simple_proxy_cli.cpp  timer.hpp
marvin/: CMakeLists.txt  CMakeLists_NEW.cmake  boost_stuff.hpp  callback_typedefs.hpp  configure_trog.hpp  m_log.cpp  m_log.hpp  macros.hpp
marvin/boost_ext/: io_service_pool.cpp  io_service_pool.hpp
marvin/buffer/: buffer.cpp  buffer.hpp  bufferV2.cpp  bufferV2.hpp  buffer_allocator.hpp  buffer_chain.cpp  buffer_chain.hpp  buffer_for_tests.hpp  contig_buffer.cpp  contig_buffer.hpp  contig_buffer_factory.hpp  contig_buffer_t.hpp  f_buffer.cpp  f_buffer.hpp  hex.cpp  hex.hpp  m_buffer.cpp  m_buffer.hpp  old_buffer.hpp
marvin/buffer_junk/: contig_buffer.hpp  contig_buffer_factory_t.hpp  hex.hpp
marvin/certificates/: certificates.cpp  certificates.hpp  env_utils.cpp  env_utils.hpp
marvin/client/: client.cpp  client.hpp  request.cpp  request.hpp  request_backup.cpp  request_chunk.cpp  request_hbc.cpp  request_headers.cpp  request_msg.cpp  request_response.cpp
marvin/collector/: capture_collector.cpp  capture_collector.hpp  capture_filter.cpp  capture_filter.hpp  collector_base.cpp  collector_base.hpp  collector_interface.cpp  collector_interface.hpp  cout_collector.cpp  cout_collector.hpp  i_collector.cpp  i_collector.hpp  pipe_collector.cpp  pipe_collector.hpp
marvin/config/: marvin_config.cpp  marvin_config.hpp
marvin/connection/: connection.cpp  connection.hpp  connection_interface.cpp  connection_interface.hpp  connection_pool.cpp  connection_pool.hpp  half_tunnel.cpp  half_tunnel.hpp  i_rw_socket.hpp  i_socket.hpp  read_socket_interface.hpp  socket_factory.cpp  socket_factory.hpp  socket_interface.hpp  tcp_connection.cpp  tcp_connection.hpp  time_out.cpp  time_out.hpp  timeout.cpp  timeout.hpp  tls_connection.cpp  tls_connection.hpp  tls_connection_old.cpp  tls_connection_old.hpp  tunnel_handler.cpp  tunnel_handler.hpp
marvin/error/: exception.cpp  exception.hpp  marvin_error.cpp  marvin_error.hpp  test_error.cpp  test_error.hpp
marvin/error_handler/: error_handler.cpp  error_handler.hpp  exception.cpp  exception.hpp
marvin/external_src/: http_parser.c  http_parser.h  simple_buffer.c
marvin/forwarding/: forward_helpers.cpp  forward_helpers.hpp  forwarding_handler.cpp  forwarding_handler.hpp  forwarding_handler.ipp  ssl_forwarding_handler.cpp  ssl_forwarding_handler.hpp
marvin/helpers/: error.cpp  error.hpp  helpers_fs.cpp  helpers_fs.hpp  macros.hpp  mitm.cpp  mitm.hpp
marvin/http/: header_fields.cpp  header_fields.hpp  headers_v2.cpp  headers_v2.hpp  http_header.cpp  http_header.hpp  http_method.cpp  http_method.hpp  i_message.hpp  marvin_http.cpp  marvin_http.hpp  marvin_okv.cpp  marvin_okv.hpp  message.cpp  message.hpp  message_base.cpp  message_base.hpp  message_factory.cpp  message_factory.hpp  message_interface.hpp  ordered_key_value.cpp  ordered_key_value.hpp  parser.cpp  parser.hpp  uri-v2.cpp  uri-v2.hpp  uri.cpp  uri.hpp  uri_query.cpp  uri_query.hpp  uri_v2.cpp  uri_v2.hpp
marvin/include/: boost_stuff.hpp  callback_typedefs.hpp  connection_handler.hpp  connection_handler.ipp  connection_interface.hpp  read_socket_interface.hpp  utest.hpp  xx-forwarding_handler.hpp  xx-forwarding_handler.ipp
marvin/message/: full_msg_rdr.cpp  full_msg_rdr.hpp  http_header.cpp  http_header.hpp  http_method.cpp  http_method.hpp  i_message.hpp  marvin_uri.cpp  marvin_uri.hpp  message.cpp  message.hpp  message_reader.cpp  message_reader.hpp  message_reader_v2.cpp  message_reader_v2.hpp  message_writer.cpp  message_writer.hpp  message_writer_v2.cpp  message_writer_v2.hpp  parser.cpp  parser.hpp  uri_query.cpp  uri_query.hpp
marvin/objc/: http_notification.mm  http_request_model.mm  marvin_delegate_objc.h  marvin_objc.mm  objc__collector.mm  objc_collector.hpp
marvin/server/: adapter.cpp  adapter.hpp  app_interface.hpp  connection_handler.cpp  connection_handler.hpp  connection_handler.ipp  connection_handler_pool .cpp  connection_handler_pool.hpp  http_server.cpp  http_server.hpp  http_server.ipp  mitm_app.cpp  mitm_app.hpp  mitm_http.cpp  mitm_http.hpp  mitm_https.cpp  mitm_https.hpp  mitm_tunnel.cpp  mitm_tunnel.hpp  request_handler_base.cpp  request_handler_base.hpp  request_handler_interface.cpp  request_handler_interface.hpp  server_connection_manager.cpp  server_connection_manager.hpp  server_connection_manager.ipp  server_context.cpp  server_context.hpp  tcp_server.cpp  tcp_server.hpp  timer.hpp
marvin/server_v2/: connection_handler.cpp  connection_handler.hpp  http_server.cpp  http_server.hpp  request_handler_base.cpp  request_handler_base.hpp  server_connection_manager.cpp  server_connection_manager.hpp  server_context.cpp  server_context.hpp
marvin/server_v3/: adapter.cpp  adapter.hpp  app_interface.hpp  connection_handler.cpp  connection_handler.hpp  connection_handler_v2.cpp  connection_handler_v2.hpp  http_server.cpp  http_server.hpp  http_server_v2.cpp  http_server_v2.hpp  mitm_app.cpp  mitm_app.hpp  mitm_http.cpp  mitm_http.hpp  mitm_https.cpp  mitm_https.hpp  mitm_tunnel.cpp  mitm_tunnel.hpp  request_handler_base.cpp  request_handler_base.hpp  request_handler_base_v2.cpp  request_handler_base_v2.hpp  request_handler_interface.cpp  request_handler_interface.hpp  server.cpp  server.hpp  timer.hpp  (+10 more)
tests/: CMakeLists.txt  mu_test.cpp  mu_test.h  readme.md  runners.cpp  runners.hpp  server_runner.cpp  test_configure_trog.hpp  test_fixture.cpp  test_fixture.hpp  tp_proxy_runner.cpp  tp_proxy_runner.hpp
(+1796 files in other folders)
